<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include layout="@layout/toolbar"
      android:layout_alignParentRight="true"
      android:layout_alignParentTop="true"
      android:layout_height="wrap_content"
      android:layout_width="match_parent">
    </include>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/toolbar"
        android:background="@color/transparent" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="15dp"
            android:orientation="vertical" >

            <!--<ImageView-->
                <!--android:layout_width="120dp"-->
                <!--android:layout_height="120dp"-->
                <!--android:layout_marginBottom="16dp"-->
                <!--android:layout_marginLeft="16dp"-->
                <!--android:layout_marginRight="16dp"-->
                <!--android:layout_marginTop="25dp"-->
                <!--android:gravity="center"-->
                <!--android:src="@drawable/protocoder_help" />-->




            <TextView
                android:id="@+id/help_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:text="@string/about_how_to_title"
                android:textColor="@color/mwmgray"
                android:textSize="25sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/help_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:shadowColor="#ffffff"
                android:shadowDx="2"
                android:shadowDy="2"
                android:text="@string/about_how_to_contents"
                android:textColor="@color/mwmgray"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/about_credits_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:text="@string/about_credits"
                android:textColor="@color/mwmgray"
                android:textSize="25sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/about_special_thanks"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:shadowColor="#ffffff"
                android:shadowDx="2"
                android:shadowDy="2"
                android:text="@string/about_special_thanks"
                android:textColor="@color/mwmgray"
                android:textSize="18sp" />


        </LinearLayout>

    </ScrollView>
</RelativeLayout>
